--- a/_includes/components/head.html
+++ b/_includes/components/head.html
@@ -1,20 +1,20 @@
 <head>
     <meta charset="UTF-8">
-    <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=contain">
-    <meta name="generator" content="Jekyll">
-    <meta name="robots" content="index, follow">
-    <meta name="author" content="{{ meta.author }}">
-    <meta name="description" content="{%- include components/title.html -%}">
-    <meta name="license" content="meta.license">
-    <meta name="repository" content="{{ site.meta.repository }}">
-    <meta name="date" content="{{ page.date | date: '%B %d, %Y' | default: site.time | date: '%B %d, %Y' }}">
-    <meta name="robots" content="index, follow">
-    <meta name="twitter:card" content="summary">
-    <meta property="og:title" content="{%- include components/title.html -%}">
+    <meta content="IE=Edge"    http-equiv="X-UA-Compatible">
+    <meta name="viewport"      content="width=device-width, initial-scale=1, viewport-fit=contain">
+    <meta name="generator"     content="Jekyll">
+    <meta name="robots"        content="index, follow">
+    <meta name="author"        content="{{ meta.author }}">
+    <meta name="description"   content="{%- include components/title.html -%}">
+    <meta name="license"       content="{{ meta.license }}">
+    <meta name="repository"    content="{{ site.meta.repository }}">
+    <meta name="date"          content="{{ page.date | date: '%B %d, %Y' | default: site.time | date: '%B %d, %Y' }}">
+    <meta name="robots"        content="index, follow">
+    <meta name="twitter:card"  content="summary">
+    <meta property="og:title"  content="{%- include components/title.html -%}">
     <meta property="og:locale" content="{{ site.locale | default: en_US' }}">
+    <meta property="og:url"    content="{{ folder }}{{ page.url }}">
     <meta property="og:description" content="{%- include components/title.html -%}">
-    <meta property="og:url" content="{{ folder }}{{ page.url }}">
     <meta property="og:site_name" content="{{ site.title }}">
     <meta property="og:type" content="website">
     <meta property="twitter:title" content="{%- include components/title.html -%}">
