--- a/_includes/components/head.html
+++ b/_includes/components/head.html
@@ -1,59 +1,58 @@
 <head>
     <meta charset="UTF-8">
-    <meta content="IE=Edge"    http-equiv="X-UA-Compatible">
-    <meta name="viewport"      content="width=device-width, initial-scale=1, viewport-fit=contain">
-    <meta name="generator"     content="Jekyll">
-    <meta name="robots"        content="index, follow">
-    <meta name="author"        content="{{ meta.author }}">
-    <meta name="description"   content="{%- include components/title.html -%}">
-    <meta name="license"       content="{{ meta.license }}">
-    <meta name="repository"    content="{{ site.meta.repository }}">
-    <meta name="date"          content="{{ page.date | date: '%B %d, %Y' | default: site.time | date: '%B %d, %Y' }}">
-    <meta name="robots"        content="index, follow">
-    <meta name="twitter:card"  content="summary">
-    <meta property="og:title"  content="{%- include components/title.html -%}">
-    <meta property="og:locale" content="{{ site.locale | default: en_US' }}">
-    <meta property="og:url"    content="{{ folder }}{{ page.url }}">
+    <meta content="IE=Edge"         http-equiv="X-UA-Compatible">
+    <meta name="viewport"           content="width=device-width, initial-scale=1, viewport-fit=contain">
+    <meta name="generator"          content="Jekyll">
+    <meta name="robots"             content="index, follow">
+    <meta name="author"             content="{{ page.author | default: meta.author }}">
+    <meta name="copyright"          content="{{meta.copyright }}">
+    <meta name="description"        content="{%- include components/title.html -%}">
+    <meta name="license"            content="{{ page.license | default: meta.license }}">
+    <meta name="repository"         content="{{ page.repository | default: meta.repository }}">
+    <meta name="date"               content="{{ page.date | date: '%B %d, %Y' | default: site.time | date: '%B %d, %Y' }}">
+    <meta name="robots"             content="index, follow">
+    <meta name="twitter:card"       content="summary">
+    <meta property="og:title"       content="{%- include components/title.html -%}">
+    <meta property="og:locale"      content="{{ meta.locale | default: 'en' }}">
+    <meta property="og:url"         content="{{ folder }}{{ page.url }}">
     <meta property="og:description" content="{%- include components/title.html -%}">
-    <meta property="og:site_name" content="{{ site.title }}">
-    <meta property="og:type" content="website">
-    <meta property="twitter:title" content="{%- include components/title.html -%}">
+    <meta property="og:site_name"   content="{{ meta.title }}">
+    <meta property="og:type"        content="website">
+    <meta property="twitter:title"  content="{%- include components/title.html -%}">
     <title>{%- include components/title.html -%}</title>
     <link href="{{ domain }}" rel="dns-prefetch" crossorigin>
     <link href="{{ domain }}" rel="preconnect">
-    <link rel="icon"    href="{{ icon }}" type="image/x-icon">
-    <link rel="preload" as="style"  href="{{css}}/style.css" type="text/css" onload="this.rel='stylesheet'">
-    <link rel="preload" as="font"   href="{{font}}/JetBrainsMono-Medium.woff2" type="font/woff2" >
-    <link rel="preload" as="font"   href="{{font}}/Mediaan-Regular.woff2"      type="font/woff2" >
-    <link rel="preload" as="font"   href="{{font}}/VisueltPro-Regular.woff2"   type="font/woff2" >
-    <link rel="preload" as="script" href="{{js}}/script.js">
-    <link rel="preload" as="script" href="{{vendor}}/lunr.min.js">
-    <link rel="preconnect" href="https://translate.google.com" >
-    <link rel="preconnect" href="https://translate.googleapis.com" >
-    <link rel="canonical"  href="{{ folder }}{{ page.url }}">
+    <link rel="icon"type="image/x-icon" href="{{ icon }}" >
+    <link rel="preload" type="text/css" href="{{css}}/style.css" as="style" onload="this.rel='stylesheet'">
+    {% for font_name in site.fonts %}<link  rel="preload" as="font" type="font/woff2" href="{{ font }}/{{ font_name }}.woff2">{% endfor %}
+    <link rel="preload"    as="script"      href="{{js}}/script.js">
+    <link rel="preload"    as="script"      href="{{vendor}}/lunr.min.js">
+    <link rel="preconnect" crossorigin="anonymous" href="https://translate.google.com" >
+    <link rel="preconnect" crossorigin="anonymous" href="https://translate.googleapis.com" >
+    <link rel="canonical" href="{{ folder }}{{ page.url }}">
+    <script src="{{vendor}}/lunr.min.js" async></script>
+    <script src="{{js}}/jtd.js" async></script>
+    <script src="{{js}}/script.js" async></script>
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
         "@type": "WebSite",
         "author": {
             "@type": "Person",
-            "name": "{{ site.meta.author }}"
+            "name": "{{ meta.author }}"
         },
-        "description": "{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}",
+        "description": "{% if page.description %}{{ page.description }}{% else %}{{ meta.description }}{% endif %}",
         "headline": "{%- include components/title.html -%}",
-        "name": "{{ site.title }}",
+        "name": "{{ meta.title }}",
         "publisher": {
             "@type": "Organization",
             "logo": {
                 "@type": "ImageObject",
                 "url": "{{ icon }}"
             },
-            "name": "{{ site.meta.author }}"
+            "name": "{{ meta.author }}"
         },
         "url": "{{ folder }}{{ page.url }}"
     }
     </script>
-    <script src="{{vendor}}/lunr.min.js" async></script>
-    <script src="{{js}}/jtd.js" async></script>
-    <script src="{{js}}/script.js" async></script>
 </head>
