--- a/_includes/components/mermaid.html
+++ b/_includes/components/mermaid.html
@@ -1,30 +1,7 @@
-{% if site.mermaid.version %}
-{% assign mermaid_major_version = site.mermaid.version | split: "." | first | plus: 0 %}
-{% else %}
-{% assign mermaid_major_version = 9 %}
-{% endif %}
-{% if mermaid_major_version > 9 %}
+{% if site.version.mermaid %}
 <script type="module">
-  {% if site.mermaid.path %}
-  import mermaid from '{{ site.mermaid.path | relative_url }}';
-  {% else %}
-  import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@{{ site.mermaid.version }}/dist/mermaid.esm.min.mjs';
-  {% endif %}
-  var config = {% include mermaid_config.js %};
-  mermaid.initialize(config);
-  mermaid.run({
-    querySelector: '.language-mermaid',
-  });
-</script>
-{% else %}
-{% if site.mermaid.path %}
-<script src="{{ site.mermaid.path | relative_url }}"></script>
-{% else %}
-<script src="https://cdn.jsdelivr.net/npm/mermaid@{{ site.mermaid.version }}/dist/mermaid.min.js"></script>
-{% endif %}
-<script>
-  var config = {% include mermaid_config.js %};
-  mermaid.initialize(config);
-  window.mermaid.init(undefined, document.querySelectorAll('.language-mermaid'));
+  import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@{{ site.version.mermaid }}/dist/mermaid.esm.min.mjs';
+  mermaid.initialize({});
+  mermaid.run({querySelector: '.language-mermaid',});
 </script>
 {% endif %}
