--- a/_includes/components/title.html
+++ b/_includes/components/title.html
@@ -1,3 +1,3 @@
-{% if page.url == "/" %}{{ site.title }}{% elsif page.collection %}{{ page.collection | upcase }}: {{ page.title
-| capitalize }} | {{ site.title }}{% else %}{{ page.title | capitalize | default: site.title }} | {{ site.title }}{%
+{% if page.url == "/" %}{{ meta.title }}{% elsif page.collection %}{{ page.collection | upcase }}: {{ page.title
+| capitalize }} | {{ meta.title }}{% else %}{{ page.title | capitalize | default: meta.title }} | {{ meta.title }}{%
 endif %}
