--- a/_includes/components/head.html
+++ b/_includes/components/head.html
@@ -23,8 +23,7 @@
     <link href="{{ domain }}" rel="dns-prefetch" crossorigin>
     <link href="{{ domain }}" rel="preconnect">
     <link rel="icon" type="image/x-icon" href="{{ icon }}">
-    <link rel="preload" type="text/css" href="{{css}}/style.css" as="style" onload="this.rel='stylesheet'">
-    {% for font_name in site.fonts %}
+    <link rel="preload" type="text/css" href="{{css}}/style.css" as="style" onload="this.rel='stylesheet'">{% for font_name in site.fonts %}
     <link rel="preload" as="font" type="font/woff2" href="{{ font }}/{{ font_name }}.woff2">{% endfor %}
     <link rel="preload" as="script" href="{{js}}/script.js">
     <link rel="preload" as="script" href="{{vendor}}/lunr.min.js">
