--- a/_includes/components/head.html
+++ b/_includes/components/head.html
@@ -55,5 +55,5 @@
         "url": "{{ folder }}{{ page.url }}"
     }
     </script>
-    <base href="{{folder}}">
+    <base href="{{folder}}/">
 </head>
