--- a/_includes/components/head.html
+++ b/_includes/components/head.html
@@ -27,6 +27,10 @@
     <link rel="preload" as="font" type="font/woff2" href="{{ font }}/{{ font_name }}.woff2">{% endfor %}
     <link rel="preload" as="script" href="{{js}}/script.js">
     <link rel="preload" as="script" href="{{vendor}}/lunr.min.js">
+
+    {% if site.version.mermaid and site.pages | where: "classes", "language-mermaid" %}<link rel="preload" href="https://cdn.jsdelivr.net/npm/mermaid@{{ site.version.mermaid }}/+esm" as="script">{% endif %}
+
+
     <link rel="preconnect" crossorigin="anonymous" href="https://translate.google.com" >
     <link rel="preconnect" crossorigin="anonymous" href="https://translate.googleapis.com" >
     <link rel="canonical" href="{{ folder }}{{ page.url }}">
