--- a/_includes/components/sidebar.html
+++ b/_includes/components/sidebar.html
@@ -1,9 +1,11 @@
-  {% include components/search_header.html %}
-
-
-  {% include_cached components/site_nav.html %}
-  {% include components/aux_nav.html %}
-
+{% include components/search_header.html %}
+{% include_cached components/site_nav.html %}
+{% if site.links %}
+<div class="aside-title">Links</div>
+{% for link in site.links %}
+<a href="{{ link.last }}" class="aside-link" rel="noopener noreferrer">{{ link.first }}</a>
+{% endfor %}
+{% endif %}
 
   <div class="dropdown">
     <button class="dropbtn aside-title hidden">Translate &rsaquo;</button>
