--- a/_includes/components/sidebar.html
+++ b/_includes/components/sidebar.html
@@ -1,7 +1,7 @@
 {% include components/search_header.html %}
 {% include_cached components/site_nav.html %}
 {% if site.links %}
-<div class="aside-title">Links</div>
+<div class="aside-title notranslate">Links</div>
 {% for link in site.links %}
 <a href="{{ link.last }}" class="aside-link" rel="noopener noreferrer">{{ link.first }}</a>
 {% endfor %}
