--- a/_includes/components/mermaid.html
+++ b/_includes/components/mermaid.html
@@ -2,7 +2,7 @@
 {% assign has_mermaid = site.pages | where: "classes", "language-mermaid" | size > 0 %}
 {% if site.version.mermaid and has_mermaid %}
 <script type="module" defer>
-  import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@{{ site.version.mermaid }}/+esm';
-         mermaid.initialize({ startOnLoad: true });
-         mermaid.run({ querySelector: '.language-mermaid' });
+    import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@{{ site.version.mermaid }}/dist/mermaid.esm.min.mjs';
+           mermaid.initialize({ startOnLoad: true });
+           mermaid.run({ querySelector: '.language-mermaid' });
 </script>{% endif %}{% endcapture %}
