--- a/_includes/components/mermaid.html
+++ b/_includes/components/mermaid.html
@@ -1,6 +1,8 @@
+<p>mermaid</p>
 {% capture _unused %}
 {% assign has_mermaid = site.pages | where: "classes", "language-mermaid" | size > 0 %}
 {% if site.version.mermaid and has_mermaid %}
+<p>mermaid pass</p>
 <script type="module" defer>
     import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@{{ site.version.mermaid }}/dist/mermaid.esm.min.mjs';
            mermaid.initialize({ startOnLoad: true });
