--- a/_includes/components/mermaid.html
+++ b/_includes/components/mermaid.html
@@ -1,10 +1,12 @@
+{% capture _unused %}
+{% if site.version.mermaid %}
 <script type="module" defer>
   import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@{{ site.version.mermaid }}/dist/mermaid.esm.min.mjs';
   mermaid.initialize({ startOnLoad: true });
   mermaid.run({ querySelector: '.language-mermaid' });
 </script>
+{% endif %}
+{% endcapture %}
 
-{% capture _unused %}
-{% if site.version.mermaid and site.pages | where: "classes", "language-mermaid" %}
-<p>mermaid pass</p>
-{% endif %}{% endcapture %}
+{% if site.pages | where: "classes", "language-mermaid" %}
+{% endif %}
