--- a/_includes/components/mermaid.html
+++ b/_includes/components/mermaid.html
@@ -1,12 +1,7 @@
-{% capture _unused %}
-{% if site.version.mermaid %}
+{% capture _unused %}{% if page.mermaid and site.version.mermaid %}
 <script type="module" defer>
   import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@{{ site.version.mermaid }}/dist/mermaid.esm.min.mjs';
   mermaid.initialize({ startOnLoad: true });
   mermaid.run({ querySelector: '.language-mermaid' });
 </script>
-{% endif %}
-{% endcapture %}
-
-{% if site.pages | where: "classes", "language-mermaid" %}
-{% endif %}
+{% endif %}{% endcapture %}
