--- a/_includes/components/head.html
+++ b/_includes/components/head.html
@@ -28,7 +28,7 @@
     <link rel="preload" as="script" href="{{js}}/script.js">
     <link rel="preload" as="script" href="{{vendor}}/lunr.min.js">{% capture _unused %}
     {% if page.mermaid and site.version.mermaid %}
-    <link rel="preload" href='https://cdn.jsdelivr.net/npm/mermaid@{{ site.version.mermaid }}/dist/mermaid.esm.min.mjs' as="script">
+    <link rel="preload" href='https://cdn.jsdelivr.net/npm/mermaid@{{ site.version.mermaid }}/+esm' as="script">
     {% endif %}
     {% endcapture %}<link rel="preconnect" crossorigin="anonymous" href="https://translate.google.com" >
     <link rel="preconnect" crossorigin="anonymous" href="https://translate.googleapis.com" >
