--- a/_includes/components/head.html
+++ b/_includes/components/head.html
@@ -1,5 +1,9 @@
 <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="{{ domain }}">
+    <link rel="preconnect" href="https://github.com">
+    <link rel="dns-prefetch" href="https://cdn.jsdelivr.net" >
+    <link rel="preconnect" crossorigin="anonymous" href="https://cdn.jsdelivr.net">
     <meta content="IE=Edge" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=contain">
     <meta name="copyright" content="{{meta.title}} ©{{ page.date | date: '%Y' | default: site.time | date: '%Y' }} {{ page.author | default: meta.author }}">
@@ -20,22 +24,23 @@
     <meta property="og:type" content="website">
     <meta property="twitter:title" content="{%- include components/title.html -%}">
     <title>{%- include components/title.html -%}</title>
-    <link href="{{ domain }}" rel="dns-prefetch" crossorigin>
-    <link href="{{ domain }}" rel="preconnect">
     <link rel="icon" type="image/x-icon" href="{{ icon }}">
     <link rel="preload" type="text/css" href="{{css}}/style.css" as="style" onload="this.rel='stylesheet'">{% for font_name in site.fonts %}
     <link rel="preload" as="font" type="font/woff2" href="{{ font }}/{{ font_name }}.woff2">{% endfor %}
     <link rel="preload" as="script" href="{{js}}/script.js">
-    <link rel="preload" as="script" href="{{vendor}}/lunr.min.js">{% capture _unused %}
-    {% if page.mermaid and site.version.mermaid %}
-    <link rel="preload" href='https://cdn.jsdelivr.net/npm/mermaid@{{ site.version.mermaid }}/+esm' as="script">
-    {% endif %}
-    {% endcapture %}<link rel="preconnect" crossorigin="anonymous" href="https://translate.google.com" >
-    <link rel="preconnect" crossorigin="anonymous" href="https://translate.googleapis.com" >
-    <link rel="canonical" href="{{ folder }}{{ page.url }}">
-    <script src="{{vendor}}/lunr.min.js" async></script>
+    {% for package, version in site.version %}{% if page[package] != false %}<link rel="preload" href="https://cdn.jsdelivr.net/npm/{{ package }}@{{ version }}/+esm" as="script">{% endif %}{% endfor %}
+
+    <script src="https://cdn.jsdelivr.net/npm/lunr@{{ site.version.lunr }}/+esm" async></script>
+
     <script src="{{js}}/jtd.js" async></script>
     <script src="{{js}}/script.js" async></script>
+    
+    <link rel="dns-prefetch" href="https://translate.google.com">
+    <link rel="dns-prefetch" href="https://translate.googleapis.com">
+    <link rel="preconnect"   crossorigin="anonymous" href="https://translate.google.com">
+    <link rel="preconnect"   crossorigin="anonymous" href="https://translate.googleapis.com">
+    <link rel="canonical" href="{{ folder }}{{ page.url }}">
+    <base href="{{folder}}/">
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
@@ -58,5 +63,4 @@
         "url": "{{ folder }}{{ page.url }}"
     }
     </script>
-    <base href="{{folder}}/">
 </head>
