--- a/_includes/components/head.html
+++ b/_includes/components/head.html
@@ -28,12 +28,9 @@
     <link rel="preload" type="text/css" href="{{css}}/style.css" as="style" onload="this.rel='stylesheet'">{% for font_name in site.fonts %}
     <link rel="preload" as="font" type="font/woff2" href="{{ font }}/{{ font_name }}.woff2">{% endfor %}
     <link rel="preload" as="script" href="{{js}}/script.js">
-    {% for package in site.version %}
-        {% assign version = site.version[package] %}
-        {% if page[package] != false %}
-            <link rel="preload" href="https://cdn.jsdelivr.net/npm/{{ package }}@{{ version }}/+esm" as="script"> 
-        {% endif %} 
-    {% endfor %}
+    {% for item in site.version %}{% if page[item.first] != false %}
+    <link rel="preload" href="https://cdn.jsdelivr.net/npm/{{ item.first }}@{{ item.last }}/+esm" as="script">
+    {% endif %}{% endfor %}
     <script src="https://cdn.jsdelivr.net/npm/lunr@{{ site.version.lunr }}/+esm" async></script>
     <script src="{{js}}/jtd.js" async></script>
     <script src="{{js}}/script.js" async></script>    
