--- a/_includes/components/head.html
+++ b/_includes/components/head.html
@@ -28,12 +28,7 @@
     <link rel="preload" type="text/css" href="{{css}}/style.css" as="style" onload="this.rel='stylesheet'">{% for font_name in site.fonts %}
     <link rel="preload" as="font" type="font/woff2" href="{{ font }}/{{ font_name }}.woff2">{% endfor %}
     <link rel="preload" as="script" href="{{js}}/script.js">
-    {% for item in site.version %}{% if page[item.first] != false %}
-    <link rel="preload" href="https://cdn.jsdelivr.net/npm/{{ item.first }}@{{ item.last }}/+esm" as="script">
-    {% endif %}{% endfor %}
-    <script src="https://cdn.jsdelivr.net/npm/lunr@{{ site.version.lunr }}/+esm" async></script>
-    <script src="{{js}}/jtd.js" async></script>
-    <script src="{{js}}/script.js" async></script>    
+    {% for item in site.version %}{% if page[item.first] != false %}<link rel="preload" href="https://cdn.jsdelivr.net/npm/{{ item.first }}@{{ item.last }}/+esm" as="script">{% endif %}{% endfor %}
     <link rel="dns-prefetch" href="https://translate.google.com">
     <link rel="dns-prefetch" href="https://translate.googleapis.com">
     <link rel="preconnect"   crossorigin="anonymous" href="https://translate.google.com">
