--- a/_includes/components/head.html
+++ b/_includes/components/head.html
@@ -35,6 +35,14 @@
     <link rel="preconnect"   crossorigin="anonymous" href="https://translate.googleapis.com">
     <link rel="canonical" href="{{ folder }}{{ page.url }}">
     <base href="{{folder}}/">
+    <style>
+        .language-mermaid {
+            visibility: hidden;
+        }
+        .language-mermaid.mermaid-loaded {
+            visibility: visible;
+        }
+    </style>
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
