--- a/_includes/components/mermaid.html
+++ b/_includes/components/mermaid.html
@@ -2,6 +2,10 @@
 <script type="module" defer>
   import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@{{ site.version.mermaid }}/+esm';
   mermaid.initialize({ startOnLoad: true });
-  mermaid.run({ querySelector: '.language-mermaid' });
+  mermaid.run({ querySelector: '.language-mermaid' }).then(() => {
+     document.querySelectorAll('.language-mermaid').forEach(el => {
+      el.classList.add('mermaid-loaded');
+    });
+  });
 </script>
 {% endif %}
