--- a/_layouts/codecraft.html
+++ b/_layouts/codecraft.html
@@ -38,19 +38,6 @@
         {{ content }}        
         {% if page.comments %}{%- include components/comments.html -%}{% endif %}
     </main>
-    <script src="https://cdn.jsdelivr.net/npm/lunr@{{ site.version.lunr }}/+esm" async></script>
-    <script src="{{js}}/jtd.js" async></script>
-    <script src="{{js}}/script.js" async></script>
-    {% if page.mermaid and site.version.mermaid %}
-    <script type="module" defer>
-        import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@{{ site.version.mermaid }}/+esm';
-        mermaid.initialize({ startOnLoad: true });
-        mermaid.run({ querySelector: '.language-mermaid' }).then(() => {
-            document.querySelectorAll('.language-mermaid').forEach(el => {
-                el.classList.add('mermaid-loaded');
-            });
-        });
-    </script>
-    {% endif %}
+    {%- include components/script.html -%}
 </body>
 </html>
