--- a/_includes/components/head.html
+++ b/_includes/components/head.html
@@ -2,8 +2,9 @@
     <meta charset="UTF-8">
     <link rel="preconnect" href="{{ domain }}">
     <link rel="preconnect" href="https://github.com">
-    <link rel="dns-prefetch" href="https://cdn.jsdelivr.net" >
+    <link rel="dns-prefetch" href="https://cdn.jsdelivr.net">
     <link rel="preconnect" crossorigin="anonymous" href="https://cdn.jsdelivr.net">
+    <link rel="dns-prefetch" href="https://utteranc.es">
     <meta content="IE=Edge" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=contain">
     <meta name="copyright" content="{{meta.title}} ©{{ page.date | date: '%Y' | default: site.time | date: '%Y' }} {{ page.author | default: meta.author }}">
