--- a/_layouts/codecraft.html
+++ b/_layouts/codecraft.html
@@ -35,9 +35,36 @@
         <h1>{{ page.title | capitalize }}</h1>
         <input type="checkbox" aria-expanded="false" id="toc" autocomplete='off'>
         <div id="index"><div id="reading-time"></div><div id="chapters"></div></div>
-        {{ content }}        
-        {% if page.comments %}{%- include components/comments.html -%}{% endif %}
+        {{ content }}
+        {% if page.comments and site.utteranc.repo %}
+        <div id="comments">
+            <h3>Comments</h3>
+            <div id="comments-utteranc" class="notranslate">
+        </div>
+        {% endif %}
     </main>
     {%- include components/script.html -%}
+    {% if page.comments and site.utteranc.repo %}
+    <script>
+    document.addEventListener("DOMContentLoaded", function () {
+        const commentsDiv = document.getElementById("comments-utteranc");
+        if (commentsDiv) {
+            const script = document.createElement("script");
+            const config = {
+                theme: "{{ site.utteranc.theme | default: 'github-light' }}",
+                issue: "{{ site.utteranc.issue | default: 'title' }}",
+                 repo: "{{ site.utteranc.repo }}"
+            };
+            script.src = "https://utteranc.es/client.js";
+            script.setAttribute("theme", config.theme);
+            script.setAttribute("issue-term", config.issue);
+            script.setAttribute("repo", config.repo);
+            script.setAttribute("crossorigin", "anonymous");
+            script.async = true;
+            commentsDiv.appendChild(script);
+        }
+    });
+  </script>
+  {% endif %}
 </body>
 </html>
