--- a/_layouts/codecraft.html
+++ b/_layouts/codecraft.html
@@ -60,13 +60,14 @@
                 const config = {
                     theme: data.theme || "github-light",
                     issue: data.issue || "title",
-                    repo: data.repo
+                    repo: data.repo,
+                    src: data.src
                 };
-            if (!config.repo) {
-                console.error("Repository is required to load comments.");
+            if (!config.repo || !config.src) {
+                console.error("Repository and source are required to load comments.");
                 return;
             }
-            script.src = "https://utteranc.es/client.js";
+            script.src = config.src;
             script.setAttribute("theme", config.theme);
             script.setAttribute("issue-term", config.issue);
             script.setAttribute("repo", config.repo);
@@ -76,7 +77,7 @@
         }
     };
 
-    document.addEventListener("DOMContentLoaded", function () {
+    document.addEventListener("DOMContentLoaded", ()=> {
         
         if (data.comments) {
             loadComments(data.comments);
