--- a/_includes/components/script.html
+++ b/_includes/components/script.html
@@ -194,20 +194,16 @@
     });
 </script>
 
-
-{% if page.mermaid and site.scripts.mermaid %}
-<script defer>
-    document.addEventListener("DOMContentLoaded", () => {
-        if (typeof mermaid !== "undefined") {
-            mermaid.initialize({ startOnLoad: true });
-            mermaid.run({ querySelector: ".language-mermaid" }).then(() => {
-                document.querySelectorAll(".language-mermaid").forEach(el => {
-                    el.classList.add("mermaid-loaded");
-                });
-            });
-        } else {
-            console.error("Mermaid library is not loaded.");
-        }
+{% if page.mermaid and site.version.mermaid %}
+<script type="module" defer>
+    import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@11.4.1/+esm';
+    mermaid.initialize({ startOnLoad: true });
+    mermaid.run({ querySelector: '.language-mermaid' }).then(() => {
+        document.querySelectorAll('.language-mermaid').forEach(el => {
+            el.classList.add('mermaid-loaded');
+        });
     });
 </script>
 {% endif %}
+
+
