--- a/_includes/components/script.html
+++ b/_includes/components/script.html
@@ -1,17 +1,7 @@
 <!--
-<script src="https://cdn.jsdelivr.net/npm/lunr@{{ site.version.lunr }}/+esm" async></script>
--->
-<!--
+    <script src="https://cdn.jsdelivr.net/npm/lunr@{{ site.version.lunr }}/+esm" async></script>
     <script src="{{js}}/jtd.js" async></script>
 -->
-
-
-{% for script in site.scripts %}
-{% if page[script.first] != false %}
-<script src="{{ script.last }}" async></script>
-{% endif %}
-{% endfor %}
-
 
 <script src="{{js}}/script.js" async></script>
 <script>
@@ -184,10 +174,12 @@
 
     document.addEventListener("DOMContentLoaded", () => {
         clipboardHandler();        
+        /*
         searchHandler("search-input", "search-results", "/articles/assets/js/search-data.json", {
              debounceDelay: 300,
              maxResults: 5
         });
+        */
         if (window.blog.comments) {
             loadComments(window.blog.comments);
         }
@@ -196,7 +188,7 @@
 
 {% if page.mermaid and site.version.mermaid %}
 <script type="module" defer>
-    import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@11.4.1/+esm';
+    import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@{{ site.version.mermaid }}/+esm';
     mermaid.initialize({ startOnLoad: true });
     mermaid.run({ querySelector: '.language-mermaid' }).then(() => {
         document.querySelectorAll('.language-mermaid').forEach(el => {
@@ -205,5 +197,3 @@
     });
 </script>
 {% endif %}
-
-
